Only try to deactivate overview whilst activate

BUG: 441325